<?xml version="1.0"?>
<package format="3">
  <name>forward_drive_pkg</name>
  <version>0.0.1</version>
  <description>Forward drive node using C++</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
